layout bug

--- a/src/components/control-panel/ControlPanel.css
+++ b/src/components/control-panel/ControlPanel.css
@@ -41,7 +41,6 @@
   border-radius: 5px;
   transition: 0.3s;
   background-color: lightgray;
-  height: 100%; /* Wtf ?????? */
 }
 
 .card-padding {
